syntax = "proto3";

package com.khi.product.grpc;

option java_multiple_files = true;
option java_package = "com.khi.product.grpc";
option java_outer_classname = "ProductProto";

service ProductGrpcService {
  rpc GetProductName (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string productId = 1;
}

message ProductResponse {
  string productName = 1;
}
